--- a/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
+++ b/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
@@ -113,14 +113,17 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_TREE_SKELTON,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,20,26,182,172
     GROUPBOX        "骨骼框架",IDC_STATIC,10,15,289,196
-    GROUPBOX        "导出类型",IDC_STATIC,304,32,165,100
-    CONTROL         "静态模型",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON,333,55,116,20
-    CONTROL         "骨骼动画模型",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,333,89,89,19
+    GROUPBOX        "导出类型",IDC_STATIC,304,32,160,76
+    CONTROL         "静态模型",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON,331,42,116,20
+    CONTROL         "骨骼动画模型",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,333,68,89,19
     LTEXT           "骨骼数:",IDC_STATIC,207,31,32,9
     EDITTEXT        IDC_EDIT_BONE_NUM,243,29,45,12,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED
     LTEXT           "挂点数:",IDC_STATIC,207,47,30,12
     EDITTEXT        IDC_EDIT2,243,46,45,13,ES_AUTOHSCROLL | ES_READONLY | WS_DISABLED
     CONTROL         "骨骼包括Dummy",IDC_CHECK_INCLUDE_DUMMY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,215,69,74,13
+    GROUPBOX        "选项",IDC_STATIC,305,114,196,88
+    CONTROL         "导出蒙皮网格",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,126,59,17
+    CONTROL         "导出关键帧动画",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,399,123,76,24
 END
 
 IDD_DIALOG2 DIALOGEX 0, 0, 460, 197
