--- a/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
+++ b/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
@@ -124,6 +124,7 @@ BEGIN
     GROUPBOX        "选项",IDC_STATIC,305,114,196,88
     CONTROL         "导出蒙皮网格",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,126,59,17
     CONTROL         "导出关键帧动画",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,399,123,76,24
+    CONTROL         "导出骨架",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,149,58,10
 END
 
 IDD_DIALOG2 DIALOGEX 0, 0, 460, 197
