modify mesh exporter add animation key exporter

--- a/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
+++ b/XGame/XSrc/X3DMAXPlugin/XAnimationExporterDll/XAnimationExporterDll.rc
@@ -131,7 +131,7 @@ IDD_DIALOG2 DIALOGEX 0, 0, 460, 197
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_BORDER | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST_ANIMATION,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,19,18,280,159
+    CONTROL         "",IDC_LIST_ANIMATION,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,19,18,280,159,WS_EX_RIGHT
     PUSHBUTTON      "添加",IDC_BUTTON_ADD,327,22,71,21
     LTEXT           "动画采样频率：",IDC_STATIC,306,154,63,9
     EDITTEXT        IDC_EDIT_FRAME_RATE,377,152,64,13,ES_AUTOHSCROLL | ES_NUMBER
