--- a/XGame/XSrc/3-Party/curl/projects/Windows/VC9/lib/libcurl.vcproj
+++ b/XGame/XSrc/3-Party/curl/projects/Windows/VC9/lib/libcurl.vcproj
@@ -429,7 +429,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\$(ProjectName)d.lib"
+				OutputFile="$(OutDir)\$(ProjectName)_d.lib"
 				SuppressStartupBanner="true"
 			/>
 			<Tool
@@ -448,6 +448,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="xcopy /y /s /r /d &quot;$(TargetPath)&quot; &quot;..\..\..\..\..\..\..\XLib\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\..\..\..\..\include\curl\*.h&quot; &quot;..\..\..\..\..\..\..\XInc\curl\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\..\..\..\..\lib\*.h&quot; &quot;..\..\..\..\..\..\..\XInc\curl\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\..\..\..\..\lib\vtls\*.h&quot; &quot;..\..\..\..\..\..\..\XInc\curl\&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -3811,407 +3812,407 @@
 			>
 			<File
 				RelativePath="..\..\..\..\lib\amigaos.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\asyn-ares.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\asyn-thread.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\base64.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\bundles.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\conncache.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\connect.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\content_encoding.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\cookie.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_addrinfo.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_fnmatch.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_gethostname.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_gssapi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_memrchr.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_multibyte.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm_core.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm_msgs.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm_wb.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_rtmp.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sasl.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sasl_sspi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sspi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_threads.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\dict.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\dotdot.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\easy.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\escape.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\file.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\fileinfo.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\formdata.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ftp.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ftplistparser.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\getenv.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\getinfo.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\gopher.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hash.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hmac.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostasyn.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostcheck.c"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\hostip4.c"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\hostip6.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostip.c"
-			>
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\hostip4.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\hostip6.c"
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostsyn.c"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\http2.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http.c"
-			>
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\http2.c"
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_chunks.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_digest.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_negotiate.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_negotiate_sspi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_proxy.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\idn_win32.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\if2ip.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\imap.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\inet_ntop.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\inet_pton.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\krb5.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ldap.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\llist.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\md4.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\md5.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\memdebug.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\mprintf.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\multi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\netrc.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\non-ascii.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\nonblock.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\openldap.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\parsedate.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pingpong.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pipeline.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pop3.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\progress.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\rawstr.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\rtsp.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\security.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\select.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\sendf.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\share.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\slist.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\smtp.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\socks.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\socks_gssapi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\socks_sspi.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\speedcheck.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\splay.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ssh.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strdup.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strequal.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strerror.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strtok.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strtoofft.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\telnet.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\tftp.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\timeval.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\transfer.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\url.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\version.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\warnless.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\wildcard.c"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\x509asn1.c"
-			>
+				>
 			</File>
 		</Filter>
 		<Filter
@@ -4219,391 +4220,391 @@
 			>
 			<File
 				RelativePath="..\..\..\..\lib\amigaos.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\arpa_telnet.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\asyn.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\bundles.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\config-win32.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\conncache.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\connect.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\content_encoding.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\cookie.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_addrinfo.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_base64.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_fnmatch.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_gethostname.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_gssapi.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_hmac.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ldap.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_md4.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_md5.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_memory.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_memrchr.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_multibyte.h"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\curl_ntlm_core.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm.h"
-			>
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\curl_ntlm_core.h"
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm_msgs.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_ntlm_wb.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_rtmp.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sasl.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sec.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_setup.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_setup_once.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_sspi.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curl_threads.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\curlx.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\dict.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\dotdot.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\easyif.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\escape.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\file.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\fileinfo.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\formdata.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ftp.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ftplistparser.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\getinfo.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\gopher.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hash.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostcheck.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\hostip.h"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\http2.h"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\http_chunks.h"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\http_digest.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http.h"
-			>
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\http2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\http_chunks.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\http_digest.h"
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_negotiate.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\http_proxy.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\if2ip.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\imap.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\inet_ntop.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\inet_pton.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\llist.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\memdebug.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\multihandle.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\multiif.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\netrc.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\non-ascii.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\nonblock.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\parsedate.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pingpong.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pipeline.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\pop3.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\progress.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\rawstr.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\rtsp.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\select.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\sendf.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\setup-vms.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\share.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\sigpipe.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\slist.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\smtp.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\sockaddr.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\socks.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\speedcheck.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\splay.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\ssh.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strdup.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strequal.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strerror.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strtok.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\strtoofft.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\telnet.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\tftp.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\timeval.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\transfer.h"
-			>
-			</File>
-			<File
-				RelativePath="..\..\..\..\lib\urldata.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\url.h"
-			>
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\lib\urldata.h"
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\warnless.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\wildcard.h"
-			>
+				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\lib\x509asn1.h"
-			>
+				>
 			</File>
 		</Filter>
 		<Filter
@@ -4611,7 +4612,7 @@
 			>
 			<File
 				RelativePath="..\..\..\..\lib\libcurl.rc"
-			>
+				>
 			</File>
 		</Filter>
 		<Filter
@@ -4622,47 +4623,47 @@
 				>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\axtls.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\curl_darwinssl.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\curl_schannel.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\cyassl.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\gskit.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\gtls.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\nss.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\openssl.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\polarssl.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\polarssl_threadlock.c"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\vtls.c"
-				>
+					>
 				</File>
 			</Filter>
 			<Filter
@@ -4670,47 +4671,47 @@
 				>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\axtls.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\curl_darwinssl.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\curl_schannel.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\cyassl.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\gskit.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\gtls.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\nssg.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\openssl.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\polarssl.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\polarssl_threadlock.h"
-				>
+					>
 				</File>
 				<File
 					RelativePath="..\..\..\..\lib\vtls\vtls.h"
-				>
+					>
 				</File>
 			</Filter>
 		</Filter>
