--- a/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
+++ b/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\XPlatform\include;..\XPlatform\include\Win;..\XPlatform\render;..\XPlatform\manager;..\XPlatform\file;..\XPlatform\math;..\XPlatform\3d;..\XPlatform\bufferstream;..\..\..\Xinc\zlib"
+				AdditionalIncludeDirectories="..\XPlatform\include;..\XPlatform\include\Win;..\XPlatform\render;..\XPlatform\manager;..\XPlatform\file;..\XPlatform\math;..\XPlatform\3d;..\XPlatform\bufferstream;..\XPlatform\util;..\..\..\Xinc\zlib"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_WIN_PLATFORM"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -77,7 +77,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /y /s /r /d &quot;$(TargetPath)&quot; &quot;..\..\..\XLib\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\include\*&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\render\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\include\win\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\file\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\manager\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\math\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\3d\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\bufferstream\*.h&quot; &quot;..\..\..\XInc\&quot;"
+				CommandLine="xcopy /y /s /r /d &quot;$(TargetPath)&quot; &quot;..\..\..\XLib\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\include\*&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\render\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\include\win\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\file\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\manager\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\math\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\3d\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\bufferstream\*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)\util\*.h&quot; &quot;..\..\..\XInc\&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -367,6 +367,18 @@
 			>
 			<File
 				RelativePath=".\bufferstream\XBufferStream.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="util"
+			>
+			<File
+				RelativePath=".\util\XMD5.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\util\XMD5.h"
 				>
 			</File>
 		</Filter>
