--- a/XGame/XSrc/XPatcher/XPatcher/XPatcher.vcproj
+++ b/XGame/XSrc/XPatcher/XPatcher/XPatcher.vcproj
@@ -41,7 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				AdditionalIncludeDirectories="..\..\..\XInc\"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_WIN_PLATFORM"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,6 +61,8 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="libcurl_d.lib XPlatform_d.lib XUtil_d.lib"
+				AdditionalLibraryDirectories="..\..\..\XLib"
 			/>
 			<Tool
 				Name="VCALinkTool"
